# I2AO

./: .gitignore  I2AO.vbs  README.md  SCENARIO-DEMO.md  build.bat  debug.bat  i2ao.spec  installer.bat  lancer.bat  launcher.pyw  pyproject.toml  requirements.txt  setup.bat
.streamlit/: config.toml
content/: repair-profile.md
content/dpgf-catalog/: prestations.yaml
content/mt-library/: 01-presentation-candidat.md  03-methodologie-diagnostic.md  05-approche-rga.md  06-site-occupe.md  07-moyens-humains.md  08-qualifications-references.md  09-qualite-livrables.md  10-planning-reactivite.md  12-securite-chantier.md  13-continuite-service.md  14-comprehension-territoriale.md
content/profiles/: README.md
content/profiles/diagnostic-post-sinistre/: bet-profile.md
content/profiles/pathologie-confortement/: bet-profile.md
content/profiles/structure-neuve/: bet-profile.md
data/affaires/demo-confortement-saint-marcellin/: analyse.json  couverture.json  dpgf.json  dpgf.xlsx  lettre.json  meta.json  mt.docx  mt.json
data/affaires/demo-oph-vallees-isere/: analyse.json  couverture.json  (+5 more)
scripts/: generate_demo_dce.py  generer_dpgf_demo.py  generer_mt_demo.py  lancer_app.bat  run_pipeline.py
src/i2ao/: __init__.py  affaires.py  app.py  candidature.py  charts.py  config.py  content_loader.py  coverage.py  db.py  docx_export.py  dpgf_engine.py  extractor.py  llm.py  mt_engine.py  pdf_parser.py  profiles_admin.py  synthese.py  usage_tracker.py  xlsx_export.py
tests/: test_affaires.py  test_content_loader.py  test_dpgf_engine.py  test_mt_engine.py  test_pdf_parser.py
(+50 files in other folders)
