[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i2ao"
version = "0.1.0"
description = "Outil de réponse aux appels d'offres pour bureau d'études structures (créneau pathologie/consolidation)"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.39",
    "google-genai>=0.8",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "plotly>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
